[package]
name = "gql-db-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.55.3"
aws-sdk-s3 = "0.28.0"
object_store = { version = "0.6.1", features = ["aws"] }
url = "2.4.0"
async-graphql = "6.0.4"
axum = { version = "0.6.0", features = ["ws", "headers"] }
async-graphql-axum = { version = "6.0.4" }
datafusion = "28.0.0"
tokio = { version = "1.32.0", features = ["full"] }
glob = "0.3.1"
anyhow = "1.0.44"
chrono = "0.4.19"
config = "0.13.3"
serde = "1.0.188"
once_cell = "1.18.0"
